datasource url fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_annanas_manager
+spring.datasource.url=jdbc:mysql://localhost:3306/db_annanas_manager?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=anna
 spring.datasource.password=1234
