--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/db_annanas_manager?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=anna
 spring.datasource.password=1234
+spring.http.multipart.max-file-size=10Mb
+spring.http.multipart.max-request-size=10Mb
